# jhack

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  build.sh  test.mk
cmake/: jhackTestsConfig.h.in
source/: jhack.cpp  jhack.h  jhack.hpp
source/process/: MemoryScanner.cpp  MemoryScanner.hpp  pptr.hpp  process.cpp  process.hpp
source/utils/: getLastError.cpp  getLastError.hpp  tchar.hpp
source/utils/tchar/: io.hpp  tstring.hpp
source/window/: window.cpp  window.hpp
test/: main.cpp
tests/: CMakeLists.txt
tests/data/: deadbeef.cpp
tests/source/: CMakeLists.txt  main.cpp
tests/source/process/: CMakeLists.txt  pptr.cpp  process.cpp
tests/source/utils/tchar/: CMakeLists.txt  tstring.cpp
